--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,22 @@
+:root, [data-theme="dark"] {
+  --background-color: #333;
+  --text-color: #fff;
+  --dropdown-background-color: rgba(51, 51, 51, 0.95);
+  --nav-bar-color: #222;
+  --note-hover: #444;
+  --ql-stroke-style: #fff; 
+}
+
+[data-theme="light"] {
+  --background-color: #ebebeb;
+  --text-color: #000000;
+  --dropdown-background-color: #ffffff;
+  --nav-bar-color: #d0d0d0;
+  --note-hover: #cecece;
+  --ql-stroke-style: #000; 
+}
+
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
