--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,4 +1,6 @@
 /* src/components/styles.css */
+@import './index.css';
+
 * {
     box-sizing: border-box;
 }
@@ -6,7 +8,7 @@
 body {
     margin: 0;
     font-family: "Roboto", sans-serif;
-    background-color: #333;
+    background-color: var(--background-color);
     width: 100%;
 }
 
@@ -21,7 +23,7 @@ body {
     width: 25%;
     max-width: 300px;
     min-width: 200px;
-    background-color: #222;
+    background-color: var(--nav-bar-color) ;
     overflow-y: auto;
     z-index: 0;
     position: relative;
@@ -34,18 +36,18 @@ body {
 .note-list-item {
     padding: 0.5rem;
     cursor: pointer;
-    border-bottom: 1px solid #444;
+    border-bottom: 1px solid #d3d3d3;
     font-size: 1rem;
-    color: #ccc;
+    color: var(--text-color);
 }
 
 .note-list-item:hover {
-    background-color: #444;
+    background-color: var(--note-hover);
 }
 
 .note-editor {
     flex: 1;
-    background-color: #333;
+    background-color: var(--background-color);
     overflow-y: auto;
     position: relative;
     width: 100%;
@@ -59,7 +61,7 @@ body {
     outline: none;
     font-size: 1rem;
     background-color: transparent;
-    color: #ffffff;
+    color: var(--text-color);
     padding: 0;
     margin: 0;
     margin-top: 10px;
